--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </nav>
 
     <div class="header-text">
-        <p>Frontend Developer</p>
+        <p>Full Stack Developer</p>
         <h1>Hi, I'm <br><span>Pranjali</span> Sankpal</h1>
     </div>
     </div>
@@ -50,11 +50,12 @@
 
                 <div class="tab-contents active-tab" id="skills">
                     <ul>
-                        <li><span>Frontend Development</span><br>Creating and designing frontend web apps</li>
-                        <li><span>Building Blogs Of the Web</span><br>HTML CSS JavaScript</li>
-                        <li><span>JavaScript Framework</span><br>Angular</li>
+                        <li><span>Frontend Development</span><br>HTML5 CSS3 BootSrap4<br>Javascript ES6 DOM Manipulation jQuery</li>
+                        <li><span>Tools</span><br>Bash Command Line<br>Git, GitHub, Version Control</li>
+                        <li><span>Backend Web Development</span><br>Node.js NPM Express.js<br>EJS REST APIs<br>Authentication Firebase</li>
+                        <li><span>JavaScript Framework</span><br>React.js<br>React Hooks</li>
                         <li><span>CSS Framework</span><br>Bootstrap</li>
-                        <li><span>Database</span><br>MongoDB</li>
+                        <li><span>Database</span><br>MongoDB<br>Mongoose</li>
                     </ul>
                 </div>
                 <div class="tab-contents" id="experience">
@@ -81,22 +82,22 @@
         <h1 class="sub-title">My Services</h1>
         <div class="services-list">
             <div>
-                <i class="fa-solid fa-code"></i>
+                <i class="fa-brands fa-react"></i>
                 <h2>Frontend Development</h2>
-                <p>I would like to use my skills to optimize the user experience. Using HTML, JavaScript and CSS will bring concepts to life. I would like to develop and maintain the user interface, implement design on mobile websites, create tools that improve site interaction and manage software workflow.</p>
-                <a href="#">Learn more</a>
+                <p>I would like to use my skills to optimize the user experience. Using HTML, JavaScript, CSS and Reactjs framework will bring concepts to life. I would like to develop and maintain the user interface, implement design on mobile websites, create tools that improve site interaction and manage software workflow.</p>
+                <!-- <a href="#">Learn more</a> -->
             </div>
             <div>
-                <i class="fa-brands fa-app-store"></i>
-                <h2>Angular</h2>
-                <p>With Angular, we can develop progressive web applications (PWA). PWA offers an app-like experience to the audience using modern web capabilities. As per our needs, we can deploy an app as native as well as progressive.</p>
-                <a href="#">Learn more</a>
+                <i class="fa-solid fa-database"></i>
+                <h2>Backend Development</h2>
+                <p>Skilledn in backend development with technologies like Node.js, Expree.js, EJS, REST APIs, databases like SQL, NOSQL, MongoDB and Mongoose. Have skills like Authentication which help to secure our web application.</p>
+                <!-- <a href="#">Learn more</a> -->
             </div>
             <div>
-                <i class="fa-brands fa-bootstrap"></i>
-                <h2>Bootstrap</h2>
-                <p>Bootstrap is a powerful framework that has taken web development, especially front-end development, and community to the next level. Also, it paces up the development process by offering resources such as templates and themes, which can be customized according to the project needs. </p>
-                <a href="#">Learn more</a>
+                <i class="fa-solid fa-code"></i>
+                <h2>Fullstack Development</h2>
+                <p>I would like to use my skills and learnings for betterment of industry I will work for. I have great skills in frontned as well as backend web development. I would like to advance my skills while working on different projects.</p>
+                <!-- <a href="#">Learn more</a> -->
             </div>
         </div>
      </div>
@@ -114,27 +115,133 @@
             <div class="layer">
                 <h3>Netflix Clone</h3>
                 <p>Netflix clone is made by using HTML, CSS and Javascript. </p>
-                <a href="https://github.com/PRANJALI-SANKPAL"><i class="fa-solid fa-up-right-from-square"></i></a>
+                <a href="https://github.com/PRANJALI-SANKPAL/Netflix-Clone"><i class="fa-solid fa-up-right-from-square"></i></a>
             </div>
             </div>
             <div class="work">
             <img src="images/work-2.png">
             <div class="layer">
                 <h3>Snake Game</h3>
-                <p>Snake game is a fun game made using frontend building blocks. This project is made by using HTML, CSS and JS. </p>
-                <a href="https://github.com/PRANJALI-SANKPAL"><i class="fa-solid fa-up-right-from-square"></i></a>
+                <p>Snake game is a game made using frontend building blocks. This project is made by HTML, CSS and JS. </p>
+                <a href="https://github.com/PRANJALI-SANKPAL/SnakeGame"><i class="fa-solid fa-up-right-from-square"></i></a>
             </div>
             </div>
             <div class="work">
             <img src="images/work-3.png">
             <div class="layer">
                 <h3>Portfolio Website</h3>
-                <p>This is my portfolio website. It contains information about my skills and learnings.</p>
+                <p>This is my portfolio website. It contains information about my skills, learnings and projects.</p>
                 <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
             </div>
             </div>
         </div>
-        <a href="#" class="btn">See more</a>
+        <div class="work-list">
+            <div class="work">
+            <img src="images/tindog.png">
+            <div class="layer">
+                <h3>tindog</h3>
+                <p>Tindog is dating app for dogs. It is fun app made for my understanding and during learning of html, css and JS.</p>
+                <a href="https://github.com/PRANJALI-SANKPAL/Tindog"><i class="fa-solid fa-up-right-from-square"></i></a>
+            </div>
+            </div>
+            <div class="work">
+            <img src="images/DiceGame.png">
+            <div class="layer">
+                <h3>Dice Game</h3>
+                <p>The Dice Game is the game made from using HTML, CSS and JavaScript. This project is made for my understanding about especially JavaScript and DOM Manipulation.</p>
+                <a href="https://github.com/PRANJALI-SANKPAL/The-Dice-Game"><i class="fa-solid fa-up-right-from-square"></i></a>
+            </div>
+            </div>
+            <div class="work">
+            <img src="images/DrumKit.png">
+            <div class="layer">
+                <h3>Drum Kit</h3>
+                <p>This is another frontend project made from using HTML, CSS and advanced JavaScript.</p>
+                <a href="https://github.com/PRANJALI-SANKPAL/The-Drum-Kit"><i class="fa-solid fa-up-right-from-square"></i></a>
+            </div>
+            </div>
+        </div>
+        <span id="dots"> </span><span id="more">
+        <div class="work-list">
+            <div class="work">
+            <img src="images/Simon.png">
+            <div class="layer">
+                <h3>The Simon Game</h3>
+                <p>Simon is an electronic game of short-term memory skill. This game is made by using my knowledge about JavaScript, HTML and CSS.</p>
+                <a href="https://github.com/PRANJALI-SANKPAL/The-Simon-Game"><i class="fa-solid fa-up-right-from-square"></i></a>
+            </div>
+            </div>
+            <div class="work">
+            <img src="images/Weather.png">
+            <div class="layer">
+                <h3>Weather App</h3>
+                <p>This project contains learnings of Weather API. Made this project during initial learnings of APIs.</p>
+                <a href="https://github.com/PRANJALI-SANKPAL/Weather-Project"><i class="fa-solid fa-up-right-from-square"></i></a>
+            </div>
+            </div>
+            <div class="work">
+            <img src="images/Newsletter-Signup.png">
+            <div class="layer">
+                <h3>Newsletter-Signup</h3>
+                <p>This is simple website used during learnings about Database. This is simple signup web app.</p>
+                <a href="https://github.com/PRANJALI-SANKPAL/Newsletter-Signup"><i class="fa-solid fa-up-right-from-square"></i></a>
+            </div>
+            </div>
+        </div>
+        <div class="work-list">
+            <div class="work">
+            <img src="images/Blog.png">
+            <div class="layer">
+                <h3>Blog</h3>
+                <p>Blog project is all about storing data, composing new blogs. It contains node modules and EJS learnings.</p>
+                <a href="https://github.com/PRANJALI-SANKPAL/Blog-Project-v2"><i class="fa-solid fa-up-right-from-square"></i></a>
+            </div>
+            </div>
+            <div class="work">
+            <img src="images/Secrets.png">
+            <div class="layer">
+                <h3>Secrets App</h3>
+                <p>Secrets app is social media app where one can share his/her secrets anonymously and can see others secrets also.</p>
+                <a href="https://github.com/PRANJALI-SANKPAL/Secrets-v5"><i class="fa-solid fa-up-right-from-square"></i></a>
+            </div>
+            </div>
+            <div class="work">
+            <img src="images/Clock.png">
+            <div class="layer">
+                <h3>Live-Clock</h3>
+                <p>Live clock website made by using React components.</p>
+                <a href="https://github.com/PRANJALI-SANKPAL/Live-Clock"><i class="fa-solid fa-up-right-from-square"></i></a>
+            </div>
+            </div>
+        </div>
+        <div class="work-list">
+            <div class="work">
+            <img src="images/emojipedia.png">
+            <div class="layer">
+                <h3>Emojipedia</h3>
+                <p>Emojipedia is explanation about meaning of different emoji's we use. Made by using Reactjs.</p>
+                <a href="https://github.com/PRANJALI-SANKPAL/Emojipedia"><i class="fa-solid fa-up-right-from-square"></i></a>
+            </div>
+            </div>
+            <div class="work">
+            <img src="images/Keeper.png">
+            <div class="layer">
+                <h3>Keeper</h3>
+                <p>Keeper is React project where we can add daily notes or can use as diary.</p>
+                <a href="https://github.com/PRANJALI-SANKPAL/Keeper-v2"><i class="fa-solid fa-up-right-from-square"></i></a>
+            </div>
+            </div>
+            <div class="work">
+            <img src="images/ToDoList.png">
+            <div class="layer">
+                <h3>To-Do List</h3>
+                <p>Simple version of To-do List app where we can add our daily targets and track them.</p>
+                <a href="https://github.com/PRANJALI-SANKPAL/ToDOList-v3"><i class="fa-solid fa-up-right-from-square"></i></a>
+            </div>
+            </div>
+        </div>
+    </span>
+        <button onclick="myFunction()" id="myBtn" class="btn">See more</button>
     </div>
 </div>
 
@@ -223,6 +330,24 @@
         })
         .catch(error => console.error('Error!', error.message))
     })
+</script>
+
+<script>
+    function myFunction() {
+  var dots = document.getElementById("dots");
+  var moreText = document.getElementById("more");
+  var btnText = document.getElementById("myBtn");
+
+  if (dots.style.display === "none") {
+    dots.style.display = "inline";
+    btnText.innerHTML = "See more";
+    moreText.style.display = "none";
+  } else {
+    dots.style.display = "none";
+    btnText.innerHTML = "See less";
+    moreText.style.display = "inline";
+  }
+}
 </script>
 
 </body>
